<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/BLUE"
            android:textSize="50dp"
            android:layout_gravity="center"
            android:text="@string/select_uv_sensor"/>

        <LinearLayout
            android:id="@+id/rest3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_scan"
                android:id="@+id/startScanBtn"
                android:layout_gravity="center_horizontal" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_scan"
                android:id="@+id/stopScanBtn"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:id="@+id/listview_ble_scan"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/connect_btn_name"
            android:id="@+id/ConnectBleBtn"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>